--- a/labs/computing-experiment-subjects/computing_experiment_subjects.ipynb
+++ b/labs/computing-experiment-subjects/computing_experiment_subjects.ipynb
@@ -6,14 +6,18 @@
    "source": [
     "# Computing Experiment Datasets #1: Experiment Subjects\n",
     "\n",
-    "This Lab is part of a multi-part series focused on computing useful experiment datasets. In this Lab, we'll use [PySpark](https://spark.apache.org/docs/latest/api/python/index.html) to compute _experiment subjects_ from [Optimizely Enriched Event](https://docs.developers.optimizely.com/optimizely-data/docs/enriched-events-export) [\"Decision\"](https://docs.developers.optimizely.com/optimizely-data/docs/enriched-events-data-specification#decisions-2) data.\n",
+    "This Lab is part of a multi-part series focused on computing useful experiment datasets. In this Lab, we'll use [PySpark](https://spark.apache.org/docs/latest/api/python/index.html) to compute _experiment subjects_ from [Optimizely Enriched Event](https://docs.developers.optimizely.com/optimizely-data/docs/enriched-events-export) [\"ecision\"](https://docs.developers.optimizely.com/optimizely-data/docs/enriched-events-data-specification#decisions-2) data.\n",
     "\n",
     "<!-- We use an external image URL rather than a relative path so that this notebook will be rendered correctly on the Optimizely Labs website -->\n",
     "![Experiment subjects computation](https://raw.githubusercontent.com/optimizely/labs/master/labs/computing-experiment-subjects/img/subjects_computation.png)\n",
     "\n",
     "**Experiment subjects** are the individual units that are exposed to a control or treatment in the course of an online experiment.  In most online experiments, subjects are website visitors or app users. However, depending on your experiment design, treatments may also be applied to individual user sessions, service requests, search queries, etc. \n",
     "\n",
-    "This Lab is a Jupyter Notebook and can be downloaded and run on its own.  Scroll to the bottom of this page for instructions on how "
+    "In this lab we'll focus mainly on computing an experiment subjects dataset from event-level [\"decision\"](https://docs.developers.optimizely.com/optimizely-data/docs/enriched-events-data-specification#decisions-2) data.  The output dataset contains a record of who was exposed to your experiment, which treatment they received, and when they first received it.  This dataset is useful for\n",
+    "- computing aggregate statistics about your experiment subjects, such as the number of visitors saw each \"variation\" on a given day\n",
+    "- joining with other analytics datasets (like [Optimizely Enriched Events](https://docs.developers.optimizely.com/optimizely-data/docs/enriched-events-data-specification#events-2)) to compute experiment metrics and perform experiment analysis\n",
+    "\n",
+    "This Lab is generated from a Jupyter Notebook.  Scroll to the bottom of this page for instructions on how to run it on your own machine."
    ]
   },
   {
