--- a/labs/computing-experiment-subjects/computing_experiment_subjects.ipynb
+++ b/labs/computing-experiment-subjects/computing_experiment_subjects.ipynb
@@ -13,9 +13,9 @@
     "\n",
     "**Experiment subjects** are the individual units that are exposed to a control or treatment in the course of an online experiment.  In most online experiments, subjects are website visitors or app users. However, depending on your experiment design, treatments may also be applied to individual user sessions, service requests, search queries, etc. \n",
     "\n",
-    "In this lab we'll focus mainly on computing an experiment subjects dataset from event-level [\"decision\"](https://docs.developers.optimizely.com/optimizely-data/docs/enriched-events-data-specification#decisions-2) data.  The output dataset contains a record of who was exposed to your experiment, which treatment they received, and when they first received it.  This dataset is useful for\n",
+    "In this Lab we'll transform an event-level [\"decision\"](https://docs.developers.optimizely.com/optimizely-data/docs/enriched-events-data-specification#decisions-2) input dataset into a subject-level (typically visitor-level) output dataset.  This output dataset contains a record of who was exposed to our experiment, which treatment they received, and when they first received it.  This dataset is useful for\n",
     "- computing aggregate statistics about your experiment subjects, such as the number of visitors saw each \"variation\" on a given day\n",
-    "- joining with other analytics datasets (like [Optimizely Enriched Events](https://docs.developers.optimizely.com/optimizely-data/docs/enriched-events-data-specification#events-2)) to compute experiment metrics and perform experiment analysis\n",
+    "- joining with other analytics datasets (like [Optimizely Enriched \"conversions\"](https://docs.developers.optimizely.com/optimizely-data/docs/enriched-events-data-specification#conversions-2)) to compute experiment metrics and perform experiment analysis\n",
     "\n",
     "This Lab is generated from a Jupyter Notebook.  Scroll to the bottom of this page for instructions on how to run it on your own machine."
    ]
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,6 +336,17 @@
     "        experiment_id,\n",
     "        variation_id\n",
     "\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusion\n",
+    "\n",
+    "In this Lab we transformed an event-level [\"decision\"](https://docs.developers.optimizely.com/optimizely-data/docs/enriched-events-data-specification#decisions-2) input dataset into a subject-level (typically visitor-level) output dataset.  This output dataset contains a record of who was exposed to our experiment, which treatment they received, and when they first received it. \n",
+    "\n",
+    "We've written our output dataset to disk so that it can be used in other analyses (and future installments in the Experiment Datasets Lab series.)  We performed a simple aggregation on our subjects dataset: counting the number of visitors in each variation included in our input dataset."
    ]
   },
   {
