--- a/labs/computing-experiment-observations/computing_experiment_observations.ipynb
+++ b/labs/computing-experiment-observations/computing_experiment_observations.ipynb
@@ -11,7 +11,21 @@
     "<!-- We use an external image URL rather than a relative path so that this notebook will be rendered correctly on the Optimizely Labs website -->\n",
     "![Experiment observations computation](https://raw.githubusercontent.com/optimizely/labs/master/labs/computing-experiment-subjects/img/observations_computation.png)\n",
     "\n",
-    "**Experiment observations** map [experiment subjects](https://www.optimizely.com/labs/computing-experiment-subjects/) onto numerical observations made about each subject during an experiment.  Observations are a foundational experiment dataset.  They can be used to compute and analyze the impact that your experiment has had on important business metrics.  They can also be sliced and diced when they are joined with dimensional like user attributes. "
+    "**Experiment observations** map [experiment subjects](https://www.optimizely.com/labs/computing-experiment-subjects/) onto numerical observations made about each subject during an experiment:\n",
+    "\n",
+    "| subject_id | experiment_id | variation_id | timestamp                | ordered? | order_count | items_ordered | revenue |\n",
+    "|------------|---------------|--------------|--------------------------|----------|-------------|---------------|---------|\n",
+    "| visitor_1  | 12345         | A            | July 20th, 2020 14:25:00 | 0        | 0           | 0             | 0       |\n",
+    "| visitor_2  | 12345         | B            | July 20th, 2020 14:28:13 | 1        | 2           | 12            | 65.21   |\n",
+    "| visitor_3  | 12345         | A            | July 20th, 2020 14:31:01 | 1        | 1           | 1             | 5.99    |\n",
+    "\n",
+    "\n",
+    "In this Lab we'll join a visitor-level **subjects** input dataset with an event-level **conversions** dataset to produce a subject-level **observatations** output dataset.  This output dataset contains a record of who was exposed to our experiment, which treatment they received, and when they first received it, along with a set of numerical observations about each subject.  This dataset is useful for\n",
+    "- computing aggregate statistics about an experiment, such as the number of visitors saw each \"variation\" on a given day, the total number of purchases associated with each experimental treatment, etc.\n",
+    "- computing and visualizing business metrics for each variation in an experiment\n",
+    "- performing statistical analysis on the change observed in your business metrics in an experiment\n",
+    "\n",
+    "This Lab is generated from a Jupyter Notebook.  Scroll to the bottom of this page for instructions on how to run it on your own machine."
    ]
   },
   {
