Tweak markdown formatting in the experiment subjects lab, and add a note about downloading enriched event data.

--- a/labs/computing-experiment-subjects/computing_experiment_subjects.ipynb
+++ b/labs/computing-experiment-subjects/computing_experiment_subjects.ipynb
@@ -35,11 +35,12 @@
    "source": [
     "### Local Data Storage\n",
     "\n",
-    "These parameters specify where this notebook should read and write data. The default location is ./example_data in this notebook's directory. You can point the notebook to another data directory by setting the OPTIMIZELY_DATA_DIR environment variable prior to starting Jupyter Lab, e.g.\n",
+    "These parameters specify where this notebook should read and write data. The default location is `./example_data` in this notebook's directory. You can point the notebook to another data directory by setting the `OPTIMIZELY_DATA_DIR` environment variable prior to starting Jupyter Lab, e.g.\n",
     "\n",
     "```sh\n",
     "export OPTIMIZELY_DATA_DIR=~/optimizely_data\n",
-    "```"
+    "```",
+    "See [Getting Started with Enriched Events](https://docs.developers.optimizely.com/optimizely-data/docs/enriched-events-getting-started) for instructions on downloading Enriched Event data.  Hint: the [oevents](https://github.com/optimizely/oevents) command line tool will automatically load data into the directory specified by `OPTIMIZELY_DATA_DIR` if the variable is set."
    ]
   },
   {
