Tweak notebook and update index.md

--- a/labs/computing-experiment-subjects/computing_experiment_subjects.ipynb
+++ b/labs/computing-experiment-subjects/computing_experiment_subjects.ipynb
@@ -64,7 +64,7 @@
    "source": [
     "### Subject ID column\n",
     "Used to group event-level records by experiment subject.  It's useful to modify this if you wish use another identifier to denote an individual subject, such as\n",
-    "- \"session_id\" if you wish to compute session-level metrics with Optimizely data\n",
+    "- `\"session_id\"` if you wish to compute session-level metrics with Optimizely data\n",
     "- A custom ID field, perhaps one found in an the user attributes attached to a decision.\n",
     "\n",
     "Note that if you wish to group by a particular [user attribute](\n",
