Completed draft of the observations notebook

--- a/labs/computing-experiment-observations/computing_experiment_observations.ipynb
+++ b/labs/computing-experiment-observations/computing_experiment_observations.ipynb
@@ -11,7 +11,9 @@
     "<!-- We use an external image URL rather than a relative path so that this notebook will be rendered correctly on the Optimizely Labs website -->\n",
     "![Experiment observations computation](https://raw.githubusercontent.com/optimizely/labs/master/labs/computing-experiment-subjects/img/observations_computation.png)\n",
     "\n",
-    "**Experiment observations** map [experiment subjects](https://www.optimizely.com/labs/computing-experiment-subjects/) onto numerical observations made about each subject during an experiment:\n",
+    "**Experiment observations** capture the the outcomes of your experiment in a format that is easy to work with for follow-on analysis. Each record in this dataset records the numerical observations made about an [experiment subject](https://www.optimizely.com/labs/computing-experiment-subjects/) during an experiment.\n",
+    "\n",
+    "Here's a simple example:\n",
     "\n",
     "| subject_id | experiment_id | variation_id | timestamp                | ordered? | order_count | items_ordered | revenue |\n",
     "|------------|---------------|--------------|--------------------------|----------|-------------|---------------|---------|\n",
@@ -20,7 +22,7 @@
     "| visitor_3  | 12345         | A            | July 20th, 2020 14:31:01 | 1        | 1           | 1             | 5.99    |\n",
     "\n",
     "\n",
-    "In this Lab we'll join a visitor-level **subjects** input dataset with an event-level **conversions** dataset to produce a subject-level **observatations** output dataset.  This output dataset contains a record of who was exposed to our experiment, which treatment they received, and when they first received it, along with a set of numerical observations about each subject.  This dataset is useful for\n",
+    "In this Lab we'll join a visitor-level [**experiment subjects**](https://www.optimizely.com/labs/computing-experiment-subjects/) input dataset with an event-level **conversions** dataset to produce a subject-level **experiment observatations** output dataset.  This output dataset contains a record of who was exposed to our experiment, which treatment they received and when they first received it, along with a set of numerical observations about each subject.  This dataset is useful for\n",
     "- computing aggregate statistics about an experiment, such as the number of visitors saw each \"variation\" on a given day, the total number of purchases associated with each experimental treatment, etc.\n",
     "- computing and visualizing business metrics for each variation in an experiment\n",
     "- performing statistical analysis on the change observed in your business metrics in an experiment\n",
@@ -52,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +199,7 @@
        "+---------------------+------------+-----------------------+-------------+"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +240,7 @@
        "+------------------------------------+-----------------------+-----------------------+---------------------+-----------+----------+------------------------------------------------+-----------+------------------------------------------------------------------------------------------------------------------------+-------------+------------------------------------------------------------------------------------------------------------------------+---------------------------+----------+-----------+-------+----------+--------+----+--------+--------------------+--------------+"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +313,7 @@
        "0  add_to_cart            11109"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -326,12 +328,12 @@
    "source": [
     "## Compute experiment events\n",
     "\n",
-    "Next we'll isolate the events that can be attributed to each experiment, which we'll call _experiment events_.  An experiment event is an event triggered during a finite window of time (called the _attribution window_) after a visitor has been exposed to an experiment treatment."
+    "Next we'll isolate the events that can be attributed to each experiment, which we'll call _experiment events_.  An experiment event is an event, such as a button click or a purchase, that was influenced by an experiment.  We compute this view by isolating the conversion events triggered during a finite window of time (called the _attribution window_) after a visitor has been exposed to an experiment treatment."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +354,7 @@
        "+-------------+------------+-----------+----------------------+"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -404,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +423,7 @@
        "++"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -447,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -513,7 +515,7 @@
        "+---------------------+------------+-----------------------+-------------+------------------------------+"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -553,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -580,7 +582,7 @@
        "+---------------------+------------+-----------------------+-------------+------------------------------+-----------------------------+"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -615,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -642,7 +644,7 @@
        "+---------------------+------------+-----------------------+-------------+------------------------------+-----------------------------+-------------------+"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -675,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -684,6 +686,31 @@
     "    .write.mode('overwrite') \\\n",
     "    .partitionBy(\"experiment_id\") \\\n",
     "    .parquet(observations_output_dir)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusion\n",
+    "\n",
+    "In this Lab we joined a visitor-level **experiment subjects** input dataset with an event-level **conversions** dataset to produce a subject-level **experiment observatations** output dataset.  This output dataset contains a record of who was exposed to our experiment, which treatment they received, and when they first received it, along with a set of numerical observations about each subject.\n",
+    "\n",
+    "We've written our output dataset to disk so that it can be used in other analyses (and future installments in the Experiment Datasets Lab series.)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## How to run this notebook\n",
+    "\n",
+    "This notebook lives in the [Optimizely Labs](http://github.com/optimizely/labs) repository.  You can download it and everything you need to run it by doing one of the following\n",
+    "- Downloading a zipped copy of this Lab directory on the [Optimizely Labs page](https://www.optimizely.com/labs/computing-experiment-subjects/)\n",
+    "- Downloading a [zipped copy of the Optimizely Labs repository](https://github.com/optimizely/labs/archive/master.zip) from Github\n",
+    "- Cloning the [Github respository](http://github.com/optimizely/labs)\n",
+    "\n",
+    "Once you've downloaded this Lab directory (on its own, or as part of the [Optimizely Labs](http://github.com/optimizely/labs) repository, follow the instructions in the `README.md` file for this Lab."
    ]
   },
   {
