--- a/labs/computing-experiment-observations/computing_experiment_observations.ipynb
+++ b/labs/computing-experiment-observations/computing_experiment_observations.ipynb
@@ -710,15 +710,8 @@
     "- Downloading a [zipped copy of the Optimizely Labs repository](https://github.com/optimizely/labs/archive/master.zip) from Github\n",
     "- Cloning the [Github respository](http://github.com/optimizely/labs)\n",
     "\n",
-    "Once you've downloaded this Lab directory (on its own, or as part of the [Optimizely Labs](http://github.com/optimizely/labs) repository, follow the instructions in the `README.md` file for this Lab."
+    "Once you've downloaded this Lab directory (on its own, or as part of the [Optimizely Labs](http://github.com/optimizely/labs) repository), follow the instructions in the `README.md` file for this Lab."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
