Move running instructions to end of notebook

--- a/labs/query-enriched-event-data-with-spark/query_enriched_event_data_with_spark.ipynb
+++ b/labs/query-enriched-event-data-with-spark/query_enriched_event_data_with_spark.ipynb
@@ -22,15 +22,6 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## How to run this notebook\n",
-        "\n",
-        "This lab lives in the [Optimizely Labs](https://github.com/optimizely/labs) repository.  Each lab contains a `README.md` file with instructions for running notebooks and any other executable code."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
         "## Creating a Spark Session"
       ]
     },
@@ -393,6 +384,20 @@
         "         experiment_id DESC,\n",
         "         variation_id ASC\n",
         "\"\"\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## How to run this notebook\n",
+        "\n",
+        "This notebook lives in the [Optimizely Labs](http://github.com/optimizely/labs) repository.  You can download it and everything you need to run it by doing one of the following\n",
+        "- Downloading a zipped copy of this Lab directory on the [Optimizely Labs page](https://www.optimizely.com/labs/computing-experiment-subjects/)\n",
+        "- Downloading a [zipped copy of the Optimizely Labs repository](https://github.com/optimizely/labs/archive/master.zip) from Github\n",
+        "- Cloning the [Github respository](http://github.com/optimizely/labs)\n",
+        "\n",
+        "Once you've downloaded this Lab directory (on its own, or as part of the [Optimizely Labs](http://github.com/optimizely/labs) repository, follow the instructions in the `README.md` file for this Lab."
       ]
     }
   ],
