--- a/labs/computing-experiment-metrics/computing_metrics_with_experiment_data.ipynb
+++ b/labs/computing-experiment-metrics/computing_metrics_with_experiment_data.ipynb
@@ -6,13 +6,7 @@
       "source": [
         "# Computing metrics with event-level experiment data\n",
         "\n",
-        "This Lab contains a series of notebooks that transform event-level data collected during an Optimizely experiment into several useful experiment datasets:\n",
-        "\n",
-        "- **Experiment units**: the individual units (usually website visitors or app users) that are exposed to a control or treatment in the course of an online experiment. \n",
-        "- **Experiment events**: the conversion events, such as a button click or a purchase, that was influenced by an experiment. We compute this view by isolating the conversion events triggered during a finite window of time (called the attribution window) after a visitor has been exposed to an experiment treatment.\n",
-        "- **Metric observations**: a mapping of experiment units to metric-specific numerical outcomes observed during an experiment\n",
-        "\n",
-        "In this notebook, we'll walk through an end-to-end workflow for computing a series of metrics with data collected by both Optimizely and a third party during an Optimizely Full Stack experiment."
+        "In this Lab, we'll walk through an end-to-end workflow for computing a series of metrics with data collected by both Optimizely and a third party during an Optimizely Full Stack experiment."
       ]
     },
     {
@@ -62,20 +56,6 @@
         "Attic & Button's call centers are managed by a third party.  This third party shares call data with Attic & Button periodically in a [CSV](https://en.wikipedia.org/wiki/Comma-separated_values) file, making it difficult to track customer support metrics on Optimizely's [Experiment Results Page](https://app.optimizely.com/l/QQbfVyRFQYGq-J57P-3XoQ?previousView=VARIATIONS&variation=email_button&utm_campaign=copy).\n",
         "\n",
         "In this notebook, we'll use Optimizely Enriched Event Data and our third-party call data to compute a variety of metrics for our experiment, including \"Support calls per visitor\" and \"Total call duration per visitor\". "
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "## What we're going to do\n",
-        "\n",
-        "1. Download Optimizely decision and conversion data for our experiment\n",
-        "2. Compute \"experiment units\" and \"experiment events\" datasets\n",
-        "3. Load customer support call log data compute an \"experiment calls\" dataset \n",
-        "4. Compute a set of metrics with our experiment datasets\n",
-        "5. Compute sequential p-values and confidence intervals using Optimizely Stats Engine Service\n",
-        "6. Render a simple experiment results report"
       ]
     },
     {
@@ -146,7 +126,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "!oevents load --type decisions --experiment 18786493712 --date 2020-09-14"
+        "# !oevents load --type decisions --experiment 18786493712 --date 2020-09-14"
       ]
     },
     {
@@ -162,7 +142,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "!oevents load --type events --date 2020-09-14"
+        "# !oevents load --type events --date 2020-09-14"
       ]
     },
     {
@@ -318,7 +298,7 @@
       "source": [
         "### Enriched decisions\n",
         "\n",
-        "First we'll use Optimizely's [Experiment API](https://library.optimizely.com/docs/api/app/v2/index.html#operation/get_experiment) to enrich our decision data with experiment and variation names.  This step makes it easier to build human-readable experiment reports with this data, as we will see below.\n",
+        "First we'll use Optimizely's [Experiment API](https://library.optimizely.com/docs/api/app/v2/index.html#operation/get_experiment) to enrich our decision data with experiment and variation names.  This step makes it easier to build human-readable experiment reports with this data.\n",
         "\n",
         "The code for enriching decision data can be found in the `enriching_decision_data.ipynb` notebook in this lab directory."
       ]
@@ -554,6 +534,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "We'll start by defining a helper function, `compute_metric_observations` which performs the units/raw observations \"join\" in the transformation described above and appends the result to a global `observations` dataframe."
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
@@ -570,7 +557,7 @@
         "    default_value=0\n",
         "):\n",
         "    \"\"\"Compute a \"metric observations\" dataset for a given metric and (optionally) append it to an existing set of\n",
-        "    metric observations. Create (ore replace) a temporary view \"observations\" with the result.\n",
+        "    metric observations. Create (or replace) a temporary view \"observations\" with the result.\n",
         "    \n",
         "    Parameters: \n",
         "        metric_name              - A string that uniquely identifies the metric for which observations are being computed,\n",
@@ -579,7 +566,7 @@
         "        raw_observations_df      - A spark dataframe containing a set of raw observations for this metric. This dataframe \n",
         "                                   should contain two columns:\n",
         "                                      visitor_id - a unique identifier for each unit\n",
-        "                                      observation - numerical outcome observered for this metric\n",
+        "                                      observation - numerical outcome observered for each unit\n",
         "                                   These metric observations will be joined with the provided experiment units dataframe\n",
         "                                   so that the resulting dataset contains an observation for every unit. \n",
         "                                   \n",
@@ -765,7 +752,7 @@
       "source": [
         "### Metric: Product detail page views per visitor\n",
         "\n",
-        "In this query we the number of product detail page views per visitor"
+        "In this query we count the number of product detail page views per visitor"
       ]
     },
     {
@@ -882,7 +869,8 @@
         "    FROM \n",
         "        observations\n",
         "    WHERE\n",
-        "        metric_name = \"Electronics revenue per visitor\"\n",
+        "        metric_name = \"Electronics revenue per visitor\" AND\n",
+        "        observation > 0\n",
         "    LIMIT 20\n",
         "\"\"\")"
       ]
