Update call center data so that banners actually reduce call volumes

--- a/labs/computing-experiment-metrics/computing_metrics_with_experiment_data.ipynb
+++ b/labs/computing-experiment-metrics/computing_metrics_with_experiment_data.ipynb
@@ -838,7 +838,7 @@
       "outputs": [],
       "source": [
         "# Read call center logs CSV into a pandas dataframe\n",
-        "df = pd.read_csv(\"call_data.csv\")\n",
+        "df = pd.read_csv(\"covid_test_data/call_data.csv\")\n",
         "\n",
         "# Display a sample of our call record data\n",
         "df.head(5)"
@@ -1042,6 +1042,8 @@
       "metadata": {},
       "source": [
         "## Computing sequential statistics with Optimizely's Stats Services\n",
+        "\n",
+        "According to the metric data above, visitors who saw either of our informational banners during our experiment were less likely call support.  How confident can we be that the difference in call rates can be attributed to our banner, as opposed to statistical noise?\n",
         "\n",
         "We're working on launching a set of Stats Services that can be used to perform sequential hypothesis testing on metric observation data.  You can learn more about these services and request early access [here](optimizely.com/solutions/data-teams)."
       ]
