Address asa's feedback

--- a/labs/computing-experiment-metrics/computing_metrics_with_experiment_data.ipynb
+++ b/labs/computing-experiment-metrics/computing_metrics_with_experiment_data.ipynb
@@ -83,7 +83,8 @@
         "from getpass import getpass\n",
         "from IPython.display import clear_output\n",
         "\n",
-        "# This notebook requires an Optimizely API token.  \n",
+        "# This notebook requires an Optimizely API token.\n",
+        "# The default token provided here is a read-only token associated with a demo Optimizely account\n",
         "OPTIMIZELY_API_TOKEN = os.environ.get(\"OPTIMIZELY_API_TOKEN\", \"2:bqZXaNE24MFUlhyGFrKKY9DMA-G02xoou7fR0nQlQ3bT89uvjtF8\")\n",
         "\n",
         "# Uncomment the following block to enable manual API token entry\n",
@@ -119,7 +120,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "We'll start by download [decision](https://docs.developers.optimizely.com/optimizely-data/docs/enriched-events-data-specification#decisions-2) data collected during our experiment.  Each **decision** captures the moment a visitor was added to our experiment."
+        "We'll start by downloading [decision](https://docs.developers.optimizely.com/optimizely-data/docs/enriched-events-data-specification#decisions-2) data collected during our experiment.  Each **decision** captures the moment a visitor was added to our experiment."
       ]
     },
     {
@@ -128,6 +129,9 @@
       "metadata": {},
       "outputs": [],
       "source": [
+        "# Uncomment this line to re-download decision data for this experiment \n",
+        "# Note: requires oevents to be install and accessible on your path\n",
+        "\n",
         "# !oevents load --type decisions --experiment 18786493712 --date 2020-09-14"
       ]
     },
@@ -144,6 +148,9 @@
       "metadata": {},
       "outputs": [],
       "source": [
+        "# Uncomment this line to re-download conversion data for this experiment \n",
+        "# Note: requires oevents to be install and accessible on your path\n",
+        "\n",
         "# !oevents load --type events --date 2020-09-14"
       ]
     },
@@ -992,6 +999,13 @@
         "        experiment_name,\n",
         "        variation_name\n",
         "\"\"\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "It looks like the average number of customer support calls per visitor and the average call duration are both much lower in the cohorts that saw one of our informational banner!"
       ]
     },
     {
