--- a/labs/computing-experiment-metrics/computing_metrics_with_experiment_data.ipynb
+++ b/labs/computing-experiment-metrics/computing_metrics_with_experiment_data.ipynb
@@ -571,7 +571,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "## Unique conversions on the \"add to cart\" event.\n",
+        "## Unique conversions on the \"purchase\" event.\n",
         "raw_purchase_conversion_rate_obs = spark.sql(f\"\"\"\n",
         "    SELECT\n",
         "        visitor_id,\n",
@@ -590,7 +590,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "We'll use our `add_observations` function to perform a left outer join between `experiment_units` and our newly-computed `add_to_cart` conversions."
+        "We'll use `util.compute_metric_observations` function to perform a left outer join between `experiment_units` and our newly-computed `purchase` conversion data."
       ]
     },
     {
