Placeholder personal access tokens (PAT's).

--- a/labs/computing-experiment-metrics/computing_metrics_with_experiment_data.ipynb
+++ b/labs/computing-experiment-metrics/computing_metrics_with_experiment_data.ipynb
@@ -85,7 +85,7 @@
         "\n",
         "# This notebook requires an Optimizely API token.\n",
         "# The default token provided here is a read-only token associated with a demo Optimizely account\n",
-        "OPTIMIZELY_API_TOKEN = os.environ.get(\"OPTIMIZELY_API_TOKEN\", \"2:d6K8bPrDoTr_x4hiFCNVidcZk0YEPwcIHZk-IZb5sM3Q7RxRDafI\")\n",
+        "OPTIMIZELY_API_TOKEN = os.environ.get(\"OPTIMIZELY_API_TOKEN\", \"<personal_access_token>\")\n",
         "\n",
         "# Uncomment the following block to enable manual API token entry\n",
         "# if OPTIMIZELY_API_TOKEN is None:\n",
@@ -1113,9 +1113,9 @@
   ],
   "metadata": {
     "kernelspec": {
-      "name": "optimizelylabs",
+      "display_name": "Python 3 (Optimizely Labs)",
       "language": "python",
-      "display_name": "Python 3 (Optimizely Labs)"
+      "name": "optimizelylabs"
     },
     "language_info": {
       "codemirror_mode": {
