--- a/labs/computing-experiment-metrics/lab_env/opticon_demo.ipynb
+++ b/labs/computing-experiment-metrics/lab_env/opticon_demo.ipynb
@@ -62,7 +62,7 @@
    ],
    "source": [
     "%env OPTIMIZELY_DATA_DIR=./opticon_data\n",
-    "%env OPTIMIZELY_API_TOKEN=2:bqZXaNE24MFUlhyGFrKKY9DMA-G02xoou7fR0nQlQ3bT89uvjtF8"
+    "%env OPTIMIZELY_API_TOKEN=<personal_access_token>"
    ]
   },
   {
