--- a/labs/computing-experiment-metrics/enriching_decision_data.ipynb
+++ b/labs/computing-experiment-metrics/enriching_decision_data.ipynb
@@ -55,7 +55,7 @@
     "SKIP_WRITING_OUTPUT_DATA_TO_DISK = os.environ.get(\"SKIP_WRITING_OUTPUT_DATA_TO_DISK\", False)\n",
     "\n",
     "# This notebook requires an Optimizely API token.\n",
-    "OPTIMIZELY_API_TOKEN = os.environ.get(\"OPTIMIZELY_API_TOKEN\", \"2:d6K8bPrDoTr_x4hiFCNVidcZk0YEPwcIHZk-IZb5sM3Q7RxRDafI\")\n",
+    "OPTIMIZELY_API_TOKEN = os.environ.get(\"OPTIMIZELY_API_TOKEN\", \"<personal_access_token>\")\n",
     "\n",
     "# Default path for reading and writing analysis data\n",
     "OPTIMIZELY_DATA_DIR = os.environ.get(\"OPTIMIZELY_DATA_DIR\", \"./covid_test_data\")"
